<resources>
    <string name="app_name">音乐间谍</string>
    <string name="action_settings">设置</string>
    <string name="sousuo">请输入要搜索的内容</string>

    <!-- 搜索引擎 -->
    <string name="share_title">搜索引擎</string>
    <string name="wy">网易</string>
    <string name="tx">qq</string>
    <string name="xm">虾米</string>
    <string name="bd">百度</string>
    <string name="kg">酷狗</string>
    <string name="kw">酷我</string>
    <string name="sing">5sing</string>

    <!-- button -->
    <string name="horizontal_single">横向单行</string>
    <string name="horizontal_multi">横向多行</string>
    <string name="vertical">竖向</string>
    <string name="grid">网格</string>

    <!-- item -->
    <string name="delete">删除</string>
    <string name="add_item">添加</string>
    <string name="source_on_github">Github位置</string>
    <string name="title_item">功能</string>

    <!-- item -->
    <string name="lc_smooth">流畅</string>
    <string name="bz_standard">标准</string>
    <string name="hq">HQ高品质</string>
    <string name="sq">SQ无损品质</string>

    <string name="about_introduce_and_help">介绍与帮助</string>
    <string name="about_introduce">网上类似的软件有太多，接口来源于网络，更多的还是学习android开发的相关知识，软件仅用于学习与交流，不得用于任何非法用途.</string>
    <string name="about_function">功能介绍</string>
    <string name="about_function_list">1.搜索音乐\n2.长按音乐列表下载音乐\n3.点击音乐列表播放音乐</string>
    <string name="about_open_source_lis">开源项目</string>
    <string name="about_open_source_libraries_list">top.zibin:BottomDialog:1.0.4\ncom.jude:easyrecyclerview:4.2.1\ncom.github.bumptech.glide:glide:3.6.1\njp.wasabeef:glide-transformations:1.3.1\ncom.zhy:okhttputils:2.6.2\ncom.bigkoo:alertview:1.0.3\ncom.wonderkiln:blurkit:1.0.0\ngithub.com/WuLiFei/LyricViewDemo</string>
    <string name="about">关于</string>
    <string name="about_version">1.2.1</string>
    <string name="message_edit">感谢支持，目前此功能暂时不能使用，服务器正在准备中。。。</string>

    <string name="toast_message_lc">此歌曲没有流畅品质</string>
    <string name="toast_message_bz">此歌曲没有标准品质</string>
    <string name="toast_message_hq">此歌曲没有HQ高品质</string>
    <string name="toast_message_sq">此歌曲没有SQ无损品质</string>
    <string name="text_message_lc">流畅品质</string>
    <string name="text_message_bz">标准品质</string>
    <string name="text_message_hq">HQ高品质</string>
    <string name="text_message_sq">SQ无损品质</string>
    <string name="snacker_message">正在下载...</string>

</resources>
